@@ -28,6 +28,7 @@ class FtwNewsLayer(PloneSandboxLayer):
     def setUpPloneSite(self, portal):
         # Install into Plone site using portal_setup
         applyProfile(portal, 'ftw.news:default')
+        applyProfile(portal, 'ftw.subsite:default')
 
 FTW_NEWS_FIXTURE = FtwNewsLayer()
 
