@@ -5,6 +5,9 @@ Changelog
 1.2.0 (unreleased)
 ------------------
 
+- Fix plone first heading of news listing view on various portal
+  types. [mbaechtold]
+
 - Implement "mopage.news.xml" API browser view. [jone]
 
 - Enable IExcludeFromNavigation behavior for news folders. [jone]
